# ffmpeg-study

./: .gitignore  ADVANCED_GUIDE.md  CMakeLists.txt  CMakeLists_Windows.txt  COPILOT_CONTEXT.md  DEVELOPMENT_LOG.md  README.md  WINDOWS_SETUP.md  create_test_videos.sh
.github/: copilot-instructions.md
examples/: frame_extraction.cpp  simple_encoder.cpp  video_analysis.cpp
examples/advanced/: gui_video_player.cpp  hardware_decoder.cpp  rtmp_streamer.cpp  video_filter.cpp  video_player.cpp
media/samples/: vp9_sample.webm
src/: ffmpeg_info.cpp
